--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -3,12 +3,26 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
     <meta charset="UTF-8">
-    <title>Thymeleaf in action</title>
 </head>
 <body>
-<div th:fragment="footer">
-    <a href="http://www.cnblogs.com/invoker-">祈求者的博客</a>
-</div>
+<footer class="blog-footer bg-inverse" style="background: #1d2124;height: 50px" th:fragment="footer">
+
+    <div class="container" >
+        <p class="m-0 text-center text-white" style="padding-top: 15px" >@ 2017<a href="http://www.cnblogs.com/invoker-/">祈求者的博客</a></p>
+    </div>
+
+    <!--JavaScript-->
+    <script src="../../js/jquery-3.2.1.min.js" th:src="@{/js/jquery-3.2.1.min.js}"></script>
+    <script src="../../js/jquery.form.min.js" th:src="@{/js/jquery.form.min.js}"></script>
+    <script src="../../js/tether.min.js" th:src="@{/js/tether.min.js}"></script>
+    <script src="../../js/bootstrap.min.js" th:src="@{/js/bootstrap.min.js}"></script>
+    <script src="../../js/nprogress.js" th:src="@{/js/nprogress.js}"></script>
+    <script src="../../js/thinker-md.vendor.min.js" th:src="@{/js/thinker-md.vendor.min.js}"></script>
+    <script src="../../js/jquery-3.2.1.min.js" th:src="@{/js/jquery-3.2.1.min.js}"></script>
+    <script src="../../js/chosen.jquery.js" th:src="@{/js/chosen.jquery.js}"></script>
+    <script src="../../js/toastr.min.js" th:src="@{/js/toastr.min.js}"></script>
+    <script src="../../js/cropbox.js" th:src="@{/js/cropbox.js}"></script>
+</footer>
 
 </body>
 </html>
