1.热部署的配置完成 2.页面header与footer的基本样式设置完毕

--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
 </head>
 <body>
-<footer class="blog-footer bg-inverse" style="background: #1d2124;height: 50px" th:fragment="footer">
+<footer class="blog-footer bg-inverse" style="background: #1d2124" th:fragment="footer">
 
     <div class="container" >
-        <p class="m-0 text-center text-white" style="padding-top: 15px" >@ 2017<a href="http://www.cnblogs.com/invoker-/">祈求者的博客</a></p>
+        <p class="m-0 text-center text-white"  >@ 2017<a href="http://www.cnblogs.com/invoker-/">祈求者的博客</a></p>
     </div>
 
     <!--JavaScript-->
@@ -18,7 +18,7 @@
     <script src="../../js/bootstrap.min.js" th:src="@{/js/bootstrap.min.js}"></script>
     <script src="../../js/nprogress.js" th:src="@{/js/nprogress.js}"></script>
     <script src="../../js/thinker-md.vendor.min.js" th:src="@{/js/thinker-md.vendor.min.js}"></script>
-    <script src="../../js/jquery-3.2.1.min.js" th:src="@{/js/jquery-3.2.1.min.js}"></script>
+    <script src="../../js/jquery.tagsinput.min.js" th:src="@{/js/jquery.tagsinput.min.js}"></script>
     <script src="../../js/chosen.jquery.js" th:src="@{/js/chosen.jquery.js}"></script>
     <script src="../../js/toastr.min.js" th:src="@{/js/toastr.min.js}"></script>
     <script src="../../js/cropbox.js" th:src="@{/js/cropbox.js}"></script>
