--- a/src/main/resources/templates/users/view.html
+++ b/src/main/resources/templates/users/view.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+<head th:replace="~{fragments/header :: header}">
 </head>
 <body>
-<div th:replace="~{fragments/header :: header}"></div>
-<h3 th:text="${userModel.title}"></h3>
-<div>
-    <p><strong>ID:</strong> <span th:text="${userModel.user.id}"></span></p>
-    <p><strong>Name:</strong> <span th:text="${userModel.user.name}"></span></p>
-    <p><strong>Email:</strong> <span th:text="${userModel.user.email}"></span></p>
-</div>
-<div>
-    <a th:href="@{'/users/delete/' + ${userModel.user.id}}">删除</a>
-    <a th:href="@{'/users/modify/' + ${userModel.user.id}}">修改</a>
-</div>
+<!-- Page content -->
+<div class="container blog-content-container">
+
+
+    <h3 th:text="${userModel.title}">Matrix</h3>
+    <div>
+        <p><strong>ID:</strong> <span th:text="${userModel.user.id}"></span></p>
+        <p><strong>Name:</strong> <span th:text="${userModel.user.name}"></span></p>
+        <p><strong>Email:</strong> <span th:text="${userModel.user.email}"></span></p>
+    </div>
+    <div>
+        <a th:href="@{'/users/delete/' + ${userModel.user.id}}">删除</a>
+        <a th:href="@{'/users/modify/' + ${userModel.user.id}}">修改</a>
+    </div>
+
+</div> <!-- /.container-->
 <div th:replace="~{fragments/footer :: footer}"></div>
 </body>
 </html>
