--- a/src/main/resources/static/css/blog.css
+++ b/src/main/resources/static/css/blog.css
@@ -28,4 +28,13 @@
     width: 50px;
 }
 
+/* login logo*/
+@media  {
+#loginLogo,#loginOutLogo{
+    position: absolute;
+    top:10px;
+    right: 100px;
+}
+}
+
 
