--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      th:fragment="header" >
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4"
+      th:fragment="header">
 <head>
     <meta charset="UTF-8">
     <title>矩阵世界!</title>
@@ -46,9 +47,9 @@
     <div class="container">
 
         <a class="navbar-brand" href="#" th:href="@{~/}">MATRIX-BLOG</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+        <button class="navbar-toggler" style="position: relative" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+            <span class="navbar-toggler-icon" style="position: relative" ></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav" style="font-family: -apple-system;font-size: 18px">
@@ -65,7 +66,29 @@
                     <a class="nav-link disabled" href="#">Disabled</a>
                 </li>
             </ul>
+
+            <!--登录判断-->
+            <div sec:authorize="isAuthenticated()" class="row " id="loginOutLogo" >
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item">
+                        <span class="nav-link" sec:authentication="name" style="font-size: 20px"></span>
+                    </li>
+                </ul>
+
+                <form action="/logout" th:action="@{/logout}" method="post">
+                    <input class="btn btn-outline-success" type="submit" value="退出">
+                </form>
+            </div>
+
+            <div sec:authorize="isAnonymous()" id="loginLogo">
+                <p class="navbar-right">
+                    <a href="/login" th:href="@{/login}" class="btn btn-outline-success my-2 my-sm-0"
+                       type="submit" >登录</a>
+                </p>
+
+            </div>
         </div>
+
     </div>
 </nav>
 </body>
